--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 body {
-  background-image: url(../img/metal.jpg);
-  background-repeat: no-repeat;
+  background-image: url(../img/concrete_seamless.png);
+  background-repeat:repeat;;
   background-position: center 400px;
   background-color: #999;
 }
@@ -17,9 +17,11 @@ a {
 
   width: 100%;
   height: 400px;
+
   background-image: url(../img/heading.jpg);
   background-repeat: no-repeat;
   background-position: center center;
+  background-size: 100%;
   background-color: #003366;
 }
 
@@ -31,15 +33,18 @@ a {
 }
 
 .main-content {
-  color: #eee;
+  color: #00080;
+  font-size: 115%;
+  font-family: serif;
   margin-top: 60px;
 }
 
 h1 {
-  padding-top: 200px;
+  padding-top: 4%;
   text-align: center;
-  text-decoration-color: white;
-  font-size: 250%;
+  text-decoration-color: 	#000080;
+  font-family: fantasy;;
+  font-size: 450%;
   font-weight: bolder;
-  color: white;
+  color: 	#000080;
 }
