--- a/css/960.css
+++ b/css/960.css
@@ -18,7 +18,7 @@ body {
 }
 
 /* `Container
-----------------------------------------------------------------------------------------------------*/
+----------------------------------------------%------------------------------------------------------*/
 
 .container_12,
 .container_16 {
