--- a/css/custom.css
+++ b/css/custom.css
@@ -17,10 +17,18 @@ img {
   border: 20px;
 }
 
+p{
+  font-family: 'Raleway', sans-serif;
+  padding-top: 10px;
+}
+
 a {
-  font-weight: bold;
   color: #000080;
-  font-family: sans-serif;
+
+}
+
+.main-content{
+  font-family: 'Raleway', sans-serif;
 }
 
 .heading {
@@ -35,22 +43,12 @@ a {
   background-color: #003366;
 }
 
-h2.intro{
-  text-align: center;
-  font-size: bold;
-}
-
 .box.grid_3{
    padding-top: 30px;
   padding-left: 30px;
   padding-right: 30px;
 }
 
-.box.grid_10{
-  padding-top: 20px;
-  background-image: url(../img/metal.jpg);
-  padding-bottom: 50px;
-}
 
 .box.grid_5{
   padding-top: 30px;
@@ -65,11 +63,46 @@ h2.intro{
 
 }
 
+.box.grid_9{
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 20px;
+}
+
+.box.grid_10{
+  background-image: url(../img/metal.jpg);
+  text-align: center;
+  margin-left: 10px;
+  margin-right: auto;
+  padding-bottom: 20px;
+}
+
+.box.grid_11{
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+}
+.
+
 .main-content {
 
   font-size: 115%;
   font-family: serif;
   margin-top: 60px;
+}
+
+.footer {
+  width: 100%;
+  height: 100px;
+  background-repeat: no-repeat;
+  background-image: url(../img/stadium.jpg);
+
+}
+
+footer p{
+    size: 100%;
+    color: white;
 }
 
 
@@ -78,15 +111,20 @@ h1 {
   padding-left: 4%;
   text-align: left;
   text-decoration-color: 	#fff;
-  font-family: serif;
-  font-size: 350%;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 450%;
   font-weight: bolder;
   color: 	#fff;
 }
 
 h2{
-  font-family: sans-serif;
-  font-size: 150%;
+  font-family: 'Roboto Condensed', sans-serif;
+  text-align: center;
+  font-size: 200%;
   font-weight: bolder;
   color: 	#000080;
+}
+
+h3 {
+
 }
