--- a/css/custom.css
+++ b/css/custom.css
@@ -89,11 +89,12 @@ a {
 }
 
 .box.grid_11{
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  font-family: 'Raleway',sans-serif;
+  font-size: 150%;
   text-align: center;
 }
-.
 
 .main-content {
 
@@ -105,16 +106,12 @@ a {
 .footer {
   width: 100%;
   height: 100px;
+  font-weight: 800;
+  font-size: 150%;
+  color: white;
   background-repeat: no-repeat;
   background-image: url(../img/stadium.jpg);
-
 }
-
-footer p{
-    size: 100%;
-    color: white;
-}
-
 
 h1 {
   padding-top: 14%;
