--- a/css/custom.css
+++ b/css/custom.css
@@ -15,6 +15,11 @@ img {
   height: 200px;
 }
 
+.fb_like{
+  position: fixed;
+  float: right;
+}
+
 .newsimg {
   border: 20px;
 }
@@ -88,6 +93,11 @@ p{
  font-size: 150%;
  font-weight: 800;
  color: #DCDCDC;
+}
+
+.fb_like{
+  position: fixed;
+  float: right;
 }
 
 .box.grid_11{
